[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/classes/class1/dialogue.gd" type="Script" id=1]
[ext_resource path="res://scenes/classes/class1/Main.gd" type="Script" id=2]
[ext_resource path="res://Fonts/arial.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/Backgrounds/Класс_утро.png" type="Texture" id=4]
[ext_resource path="res://Sprites/SpritesVN/Катя.png" type="Texture" id=5]
[ext_resource path="res://Sprites/StaticSprites/red_arrow_PNG1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/StaticSprites/wallet.png" type="Texture" id=7]
[ext_resource path="res://scenes/classes/class1/Item.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 80
use_mipmaps = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 75
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 30.5, 26 )

[node name="scene" type="Node2D"]

[node name="dialogue" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_left = 108.0
margin_top = 436.0
margin_right = 148.0
margin_bottom = 476.0
rect_scale = Vector2( 0.3, 0.3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBox" type="ColorRect" parent="Control"]
margin_left = 26.667
margin_top = 1226.67
margin_right = 4026.67
margin_bottom = 1726.67
rect_scale = Vector2( 1.4, 1.53333 )
color = Color( 0, 0, 0, 0.529412 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/TextBox"]
margin_left = 43.0
margin_top = 30.0
margin_right = 386.0
margin_bottom = 223.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Control/TextBox"]
wait_time = 0.022

[node name="RichTextLabel" type="RichTextLabel" parent="Control/TextBox"]
margin_left = 400.0
margin_top = 40.0
margin_right = 3073.0
margin_bottom = 279.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="Position2D" parent="Control"]
position = Vector2( 1053.33, -433.333 )
scale = Vector2( 3.33333, 3.33333 )

[node name="right" type="Position2D" parent="Control"]
position = Vector2( 2160, -433.333 )
scale = Vector2( 3.33333, 3.33333 )

[node name="Choise1" type="Button" parent="Control"]
margin_left = 3250.0
margin_top = 326.667
margin_right = 4150.0
margin_bottom = 626.667
custom_fonts/font = SubResource( 3 )
text = "Choise1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choise2" type="Button" parent="Control"]
margin_left = 3250.0
margin_top = 706.667
margin_right = 4150.0
margin_bottom = 1006.67
custom_fonts/font = SubResource( 4 )
text = "Choise2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Control"]
margin_left = 240.0
margin_top = 1614.0
margin_right = 3240.0
margin_bottom = 3414.0
rect_scale = Vector2( -0.11, -0.123 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="Control"]
margin_left = 5746.0
margin_top = 1614.0
margin_right = 8746.0
margin_bottom = 3414.0
rect_scale = Vector2( -0.11, -0.123 )
texture_normal = ExtResource( 6 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Char" type="Sprite" parent="Control"]
position = Vector2( 1013.33, 766.667 )
scale = Vector2( 1.5, 1.5 )
z_index = -1
texture = ExtResource( 5 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( 958, 541.5 )
scale = Vector2( 1.50156, 1.49861 )
z_index = -2
texture = ExtResource( 4 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Wallet" type="StaticBody2D" parent="Node2D"]
input_pickable = true
script = ExtResource( 8 )

[node name="Wallet" type="Sprite" parent="Node2D/Wallet"]
position = Vector2( 1816, 641 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Wallet"]
position = Vector2( 1816.5, 641 )
shape = SubResource( 5 )

[connection signal="timeout" from="Control/TextBox/Timer" to="Control" method="_on_Timer_timeout"]
[connection signal="pressed" from="Control/Choise1" to="Control" method="_on_Choise1_pressed"]
[connection signal="pressed" from="Control/Choise2" to="Control" method="_on_Choise2_pressed"]
[connection signal="pressed" from="Control/TextureButton" to="Control" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Control/TextureButton2" to="Control" method="_on_TextureButton2_pressed"]
